update pwfup contract, add pwscr contract and fixed some bugs

--- a/app/src/main/res/layout/activity_section_a_form0.xml
+++ b/app/src/main/res/layout/activity_section_a_form0.xml
@@ -429,7 +429,7 @@
                         android:id="@+id/kapr14"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="dd/MM/yyyy"
+                        android:hint="dd-MM-yyyy"
                         app:dateFormat="dd-MM-yyyy"
                         app:maxDate="CR_DATE" />
 
