--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,8 +110,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:onClick="@{(v) -> callback.openForm(3)}"
-                android:text="FORM-2 RECRUITMENT FORM"
-                android:visibility="gone" />
+                android:text="FORM-2 RECRUITMENT FORM" />
 
             <Button
                 android:layout_width="match_parent"
