--- a/app/src/main/res/layout/activity_section_c_form2.xml
+++ b/app/src/main/res/layout/activity_section_c_form2.xml
@@ -20,7 +20,6 @@
                 android:id="@+id/fldGrpSecC01"
                 style="@style/linearlayout_view_wt_bound">
 
-
                 <!-- kf2c01_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c01"
@@ -33,10 +32,9 @@
                             android:text="@string/kf2c01" />
 
                         <EditText
-                            android:id="@+id/kf2c01a"
+                            android:id="@+id/kf2c01"
                             style="@style/EditText_number"
                             android:hint="@string/kf2c01a"
-                            android:inputType="number"
                             android:maxLength="4" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -53,10 +51,9 @@
                             android:text="@string/kf2c02" />
 
                         <EditText
-                            android:id="@+id/kf2c02a"
+                            android:id="@+id/kf2c02"
                             style="@style/EditText_number"
                             android:hint="@string/kf2c02a"
-                            android:inputType="number"
                             android:maxLength="4" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -73,10 +70,9 @@
                             android:text="@string/kf2c03" />
 
                         <EditText
-                            android:id="@+id/kf2c03a"
+                            android:id="@+id/kf2c03"
                             style="@style/EditText_number"
                             android:hint="@string/kf2c03a"
-                            android:inputType="number"
                             android:maxLength="4" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -112,7 +108,8 @@
                 <!-- kf2c05_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c05"
-                    style="@style/cardView">
+                    style="@style/cardView"
+                    android:visibility="@{kf2c04b.checked ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout style="@style/linearlayout_view">
 
@@ -144,11 +141,19 @@
                                 style="@style/i_radiobutton"
                                 android:text="@string/kf2c05d" />
 
-                            <EditText
-                                android:id="@+id/kf2c05x"
-                                style="@style/EditText"
+                            <RadioButton
+                                android:id="@+id/kf2c0596"
+                                style="@style/i_radiobutton"
+                                android:text="@string/other" />
 
-                                android:maxLength="30" />
+                            <EditText
+                                android:id="@+id/kf2c0596x"
+                                style="@style/EditText"
+                                android:hint="@string/other"
+                                android:tag="kf2c0596"
+                                android:text='@{kf2c0596.checked ? kf2c0596x.getText.toString : "" }'
+                                android:visibility='@{kf2c0596.checked ? View.VISIBLE : View.GONE }' />
+
                         </RadioGroup>
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -283,11 +288,18 @@
                                 style="@style/i_radiobutton"
                                 android:text="@string/kf2c09d" />
 
-                            <EditText
-                                android:id="@+id/kf2c09x"
-                                style="@style/EditText"
+                            <RadioButton
+                                android:id="@+id/kf2c0996"
+                                style="@style/i_radiobutton"
+                                android:text="@string/other" />
 
-                                android:maxLength="30" />
+                            <EditText
+                                android:id="@+id/kf2c0996x"
+                                style="@style/EditText"
+                                android:hint="@string/other"
+                                android:tag="kf2c0996"
+                                android:text='@{kf2c0996.checked ? kf2c0996x.getText.toString : "" }'
+                                android:visibility='@{kf2c0996.checked ? View.VISIBLE : View.GONE }' />
                         </RadioGroup>
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -328,7 +340,8 @@
                 <!-- kf2c11_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c11"
-                    style="@style/cardView">
+                    style="@style/cardView"
+                    android:visibility="@{kf2c10a.checked ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout style="@style/linearlayout_view">
 
@@ -369,6 +382,25 @@
                                 android:id="@+id/kf2c11f"
                                 style="@style/checkbox"
                                 android:text="@string/kf2c11f" />
+
+                            <CheckBox
+                                android:id="@+id/kf2c1196"
+                                style="@style/checkbox"
+                                android:text="@string/other" />
+
+                            <EditText
+                                android:id="@+id/kf2c1196x"
+                                style="@style/EditText"
+                                android:hint="@string/other"
+                                android:tag="kf2c1196"
+                                android:text='@{kf2c1196.checked ? kf2c1196x.getText.toString : "" }'
+                                android:visibility='@{kf2c1196.checked ? View.VISIBLE : View.GONE }' />
+
+                            <CheckBox
+                                android:id="@+id/kf2c1198"
+                                style="@style/checkbox"
+                                android:text="@string/dkn" />
+
                         </LinearLayout>
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
