--- a/app/src/main/res/layout/activity_section_a_form0.xml
+++ b/app/src/main/res/layout/activity_section_a_form0.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
+            android:focusableInTouchMode="true"
             android:layoutDirection="rtl"
             android:orientation="vertical">
 
@@ -133,20 +134,6 @@
                     android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                     android:hint="@string/kapr03"
                     android:inputType="text" />
-
-                <!--W-ID-->
-                <TextView
-                    style="@style/i_textview"
-                    android:text="@string/kapr02" />
-
-                <com.edittextpicker.aliazaz.EditTextPicker
-                    android:id="@+id/womenID"
-                    style="@style/EditText_number"
-                    android:hint="@string/kapr02"
-                    android:maxLength="1"
-                    app:maxValue="5"
-                    app:minValue="1"
-                    app:type="range" />
 
             </LinearLayout>
 
@@ -271,13 +258,6 @@
                         app:minValue="2"
                         app:type="range" />
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/pwcounter"
-                    style="@style/textview_fm_lst_h"
-                    android:text=""
-                    android:visibility="gone"
-                    tools:visibility="visible" />
 
                 <TextView
                     style="@style/i_textview"
