--- a/app/src/main/res/layout/activity_section_a_form0.xml
+++ b/app/src/main/res/layout/activity_section_a_form0.xml
@@ -59,6 +59,20 @@
                 android:layout_height="wrap_content"
                 android:padding="20dp" />
 
+            <!--Village code label-->
+            <android.support.v7.widget.CardView style="@style/cardView">
+
+                <LinearLayout style="@style/linearlayout_view">
+
+                    <TextView
+                        android:id="@+id/villageLabel"
+                        style="@style/textview_fm_lst_h"
+                        android:text="...." />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
             <!--surveillance-->
             <LinearLayout
                 android:id="@+id/checkBtnLayout"
