--- a/app/src/main/res/layout/activity_section_info_kmc.xml
+++ b/app/src/main/res/layout/activity_section_info_kmc.xml
@@ -81,6 +81,20 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
+            <!--Village code label-->
+            <android.support.v7.widget.CardView style="@style/cardView">
+
+                <LinearLayout style="@style/linearlayout_view">
+
+                    <TextView
+                        android:id="@+id/villageLabel"
+                        style="@style/textview_fm_lst_h"
+                        android:text="...." />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
             <LinearLayout
                 android:id="@+id/checkBtnLayout"
                 android:layout_width="match_parent"
