--- a/app/src/main/res/layout/activity_section_info_kmc.xml
+++ b/app/src/main/res/layout/activity_section_info_kmc.xml
@@ -179,10 +179,10 @@
 
                             <TextView
                                 android:id="@+id/kf1a2"
+                                style="@style/textview"
                                 android:enabled="false"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:padding="20dp" />
+                                android:padding="20dp"
+                                android:textSize="30sp" />
 
                         </LinearLayout>
                     </android.support.v7.widget.CardView>
