--- a/app/src/main/res/layout/activity_section_a_form1.xml
+++ b/app/src/main/res/layout/activity_section_a_form1.xml
@@ -48,7 +48,7 @@
                             android:text="@string/kf1b01" />
 
                         <com.edittextpicker.aliazaz.EditTextPicker
-                            android:id="@+id/kf1b01a"
+                            android:id="@+id/kf1b01"
                             style="@style/EditText_number"
                             android:hint="@string/kf1b01a"
                             android:maxLength="4"
@@ -1009,7 +1009,7 @@
                             style="@style/linearlayout_view_wt_bound"
                             android:visibility="@{kf1b08a.checked ? View.VISIBLE : View.GONE}">
 
-                            <!-- kf1b010-->
+                            <!-- kf1b10-->
                             <android.support.v7.widget.CardView
                                 android:id="@+id/fldGrpCVkf1b010"
                                 style="@style/cardView">
@@ -1021,7 +1021,7 @@
                                         android:text="@string/kf1b10" />
 
                                     <RadioGroup
-                                        android:id="@+id/kf1b010"
+                                        android:id="@+id/kf1b10"
                                         style="@style/i_radiogroup">
 
                                         <RadioButton
@@ -1050,11 +1050,11 @@
                                         android:text="@string/kf1b11" />
 
                                     <com.edittextpicker.aliazaz.EditTextPicker
-                                        android:id="@+id/kf1b11a"
+                                        android:id="@+id/kf1b11"
                                         style="@style/EditText_number"
                                         android:hint="@string/kf1b11"
-                                        android:maxLength="4"
-                                        android:text='@{kf1b10a.checked ? kf1b11a.getText.toString : ""}'
+                                        android:maxLength="3"
+                                        android:text='@{kf1b10a.checked ? kf1b11.getText.toString : ""}'
                                         app:maxValue="9999"
                                         app:minValue="1"
                                         app:type="range" />
