--- a/app/src/main/res/layout/activity_section_b_form2.xml
+++ b/app/src/main/res/layout/activity_section_b_form2.xml
@@ -36,6 +36,7 @@
                             android:id="@+id/kf2b01"
                             style="@style/EditText_number"
                             android:hint="@string/kf2b01"
+                            android:maxLength="2"
                             app:maxValue="50"
                             app:minValue="15"
                             app:type="range" />
@@ -53,12 +54,15 @@
                             style="@style/i_textview"
                             android:text="@string/kf2b02" />
 
-                        <EditText
+                        <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf2b02"
                             style="@style/textInput"
                             android:hint="@string/kf2b02"
                             android:inputType="number"
-                            android:maxLength="2" />
+                            android:maxLength="2"
+                            app:maxValue="16"
+                            app:minValue="0"
+                            app:type="range" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
@@ -126,12 +130,12 @@
                             <RadioButton
                                 android:id="@+id/kf2b05a"
                                 style="@style/i_radiobutton"
-                                android:text="@string/yes" />
+                                android:text="@string/male" />
 
                             <RadioButton
                                 android:id="@+id/kf2b05b"
                                 style="@style/i_radiobutton"
-                                android:text="@string/no" />
+                                android:text="@string/female" />
                         </RadioGroup>
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -235,8 +239,8 @@
                             android:maxLength="1"
                             android:text='@{kf2b07b.checked ? kf2b08.getText.toString : "" }'
                             android:visibility='@{kf2b07b.checked ? View.VISIBLE : View.GONE }'
-                            app:maxValue="5"
-                            app:minValue="1"
+                            app:maxValue="3"
+                            app:minValue="2"
                             app:type="range" />
 
                     </LinearLayout>
@@ -303,16 +307,16 @@
                             style="@style/EditText_number"
                             android:hint="@string/weeks"
                             android:maxLength="2"
-                            app:maxValue="39"
-                            app:minValue="1"
+                            app:maxValue="42"
+                            app:minValue="0"
                             app:type="range" />
 
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf2b10m"
                             style="@style/EditText_number"
-                            android:hint="@string/years"
-                            android:maxLength="2"
-                            app:maxValue="11"
+                            android:hint="@string/months"
+                            android:maxLength="1"
+                            app:maxValue="9"
                             app:minValue="0"
                             app:type="range" />
 
@@ -334,10 +338,10 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf2b11"
                             style="@style/EditText_number_de"
-                            android:hint="@string/kf2b11"
+                            android:hint="@string/kf2b11a"
                             android:maxLength="4"
-                            app:maxValue="40"
-                            app:minValue="0.5"
+                            app:maxValue="2500"
+                            app:minValue="1200"
                             app:type="range" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -357,8 +361,8 @@
                             android:id="@+id/kf2b12"
                             style="@style/EditText_number"
                             android:hint="@string/kf2b12"
-                            android:maxLength="1"
-                            app:maxValue="9"
+                            android:maxLength="2"
+                            app:maxValue="15"
                             app:minValue="1"
                             app:type="range" />
                     </LinearLayout>
@@ -548,32 +552,39 @@
 
             </LinearLayout>
 
-
+            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
-                style="@style/linearlayout_view"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:id="@+id/fldGrpbtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingTop="32dp">
 
                 <Button
-                    android:id="@+id/btn_Continue"
-                    style="@style/buttons2"
-                    android:background="@color/colorPrimary"
+                    android:id="@+id/btnNext"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
                     android:text="@string/nextSection"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
 
                 <Button
-                    android:id="@+id/btn_End"
-                    style="@style/buttons2"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/colorAccent"
+                    android:id="@+id/btnEnd"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/end_interview"
-                    android:textColor="@color/white" />
+                    android:text="@string/endForm"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
             </LinearLayout>
 
         </LinearLayout>
