--- a/app/src/main/res/layout/activity_section_b_form3.xml
+++ b/app/src/main/res/layout/activity_section_b_form3.xml
@@ -323,31 +323,39 @@
 
             </LinearLayout>
 
+            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
-                style="@style/linearlayout_view"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:id="@+id/fldGrpbtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingTop="32dp">
 
                 <Button
-                    android:id="@+id/btn_Continue"
-                    style="@style/buttons2"
-                    android:background="@color/colorPrimary"
+                    android:id="@+id/btnNext"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
                     android:text="@string/nextSection"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
 
                 <Button
-                    android:id="@+id/btn_End"
-                    style="@style/buttons2"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/colorAccent"
+                    android:id="@+id/btnEnd"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/end_interview"
-                    android:textColor="@color/white" />
+                    android:text="@string/endForm"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
             </LinearLayout>
 
         </LinearLayout>
