--- a/app/src/main/res/layout/activity_section_c_form2.xml
+++ b/app/src/main/res/layout/activity_section_c_form2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.form1.SectionAForm1Activity">
 
@@ -31,11 +32,14 @@
                             style="@style/i_textview"
                             android:text="@string/kf2c01" />
 
-                        <EditText
+                        <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf2c01"
                             style="@style/EditText_number"
                             android:hint="@string/kf2c01a"
-                            android:maxLength="4" />
+                            android:maxLength="2"
+                            app:maxValue="36"
+                            app:minValue="32"
+                            app:type="range" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
@@ -50,11 +54,14 @@
                             style="@style/i_textview"
                             android:text="@string/kf2c02" />
 
-                        <EditText
+                        <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf2c02"
                             style="@style/EditText_number"
                             android:hint="@string/kf2c02a"
-                            android:maxLength="4" />
+                            android:maxLength="3"
+                            app:maxValue="120"
+                            app:minValue="40"
+                            app:type="range" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
@@ -69,11 +76,14 @@
                             style="@style/i_textview"
                             android:text="@string/kf2c03" />
 
-                        <EditText
+                        <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf2c03"
                             style="@style/EditText_number"
                             android:hint="@string/kf2c03a"
-                            android:maxLength="4" />
+                            android:maxLength="3"
+                            app:maxValue="120"
+                            app:minValue="40"
+                            app:type="range" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
@@ -187,6 +197,11 @@
                                 android:id="@+id/kf2c06c"
                                 style="@style/i_radiobutton"
                                 android:text="@string/kf2c06c" />
+
+                            <RadioButton
+                                android:id="@+id/kf2c0698"
+                                style="@style/i_radiobutton"
+                                android:text="@string/dkn" />
 
                         </RadioGroup>
                     </LinearLayout>
@@ -351,7 +366,8 @@
 
                         <LinearLayout
                             android:id="@+id/fldGrpLLkf2c11"
-                            style="@style/linearlayout_view_wt_bound">
+                            style="@style/linearlayout_view_wt_bound"
+                            android:tag="0">
 
                             <CheckBox
                                 android:id="@+id/kf2c11a"
@@ -396,12 +412,15 @@
                                 android:text='@{kf2c1196.checked ? kf2c1196x.getText.toString : "" }'
                                 android:visibility='@{kf2c1196.checked ? View.VISIBLE : View.GONE }' />
 
-                            <CheckBox
-                                android:id="@+id/kf2c1198"
-                                style="@style/checkbox"
-                                android:text="@string/dkn" />
 
                         </LinearLayout>
+
+                        <CheckBox
+                            android:id="@+id/kf2c1198"
+                            style="@style/checkbox"
+                            android:tag="-1"
+                            android:text="@string/dkn" />
+
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
@@ -409,30 +428,37 @@
 
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
-                style="@style/linearlayout_view"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:id="@+id/fldGrpbtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingTop="32dp">
 
                 <Button
-                    android:id="@+id/btn_Continue"
-                    style="@style/buttons2"
-                    android:background="@color/colorPrimary"
+                    android:id="@+id/btnNext"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
                     android:text="@string/nextSection"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
 
                 <Button
-                    android:id="@+id/btn_End"
-                    style="@style/buttons2"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/colorAccent"
+                    android:id="@+id/btnEnd"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/end_interview"
-                    android:textColor="@color/white" />
+                    android:text="@string/endForm"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
             </LinearLayout>
 
         </LinearLayout>
