--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,8 +118,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:onClick="@{(v) -> callback.openForm(4)}"
-                android:text="FORM-3 FOLLOWUP FORM"
-                android:visibility="gone" />
+                android:text="FORM-3 FOLLOWUP FORM" />
 
             <Button
                 android:id="@+id/syncServer"
