--- a/app/src/main/res/layout/activity_section_b_form2.xml
+++ b/app/src/main/res/layout/activity_section_b_form2.xml
@@ -277,7 +277,8 @@
                 <!-- kf2b10-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2b10"
-                    style="@style/cardView">
+                    style="@style/cardView"
+                    android:visibility='@{kf2b09a.checked ? View.VISIBLE : View.GONE}'>
 
                     <LinearLayout style="@style/linearlayout_view">
 
@@ -306,8 +307,7 @@
                             style="@style/EditText_number"
                             android:hint="@string/weeks"
                             android:maxLength="2"
-                            android:text='@{kf2b10a.checked ? kf2b10d.getText.toString : ""}'
-                            android:visibility='@{kf2b10a.checked ? View.VISIBLE : View.GONE}'
+                            android:text='@{kf2b09a.checked ? kf2b10d.getText.toString : ""}'
                             app:maxValue="42"
                             app:minValue="0"
                             app:type="range" />
@@ -317,8 +317,7 @@
                             style="@style/EditText_number"
                             android:hint="@string/months"
                             android:maxLength="1"
-                            android:text='@{kf2b10a.checked ? kf2b10m.getText.toString : ""}'
-                            android:visibility='@{kf2b10a.checked ? View.VISIBLE : View.GONE}'
+                            android:text='@{kf2b09a.checked ? kf2b10m.getText.toString : ""}'
                             app:maxValue="9"
                             app:minValue="0"
                             app:type="range" />
