some bugs fixed and add some new functionalities

--- a/app/src/main/res/layout/activity_section_f_form3.xml
+++ b/app/src/main/res/layout/activity_section_f_form3.xml
@@ -17,7 +17,7 @@
         <LinearLayout style="@style/linearlayout_view">
 
             <LinearLayout
-                android:id="@+id/fldGrpSecB02"
+                android:id="@+id/fldGrpSecF02"
                 style="@style/linearlayout_view_wt_bound">
 
 
