--- a/app/src/main/res/layout/activity_section_b_form3.xml
+++ b/app/src/main/res/layout/activity_section_b_form3.xml
@@ -118,11 +118,11 @@
                 </android.support.v7.widget.CardView>
 
                 <LinearLayout
+                    android:id="@+id/fldGrpSecB03"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility='@{!kf3b02a.checked? View.GONE : View.VISIBLE}'>
-
+                    android:visibility='@{kf3b02a.checked? View.VISIBLE : View.GONE}'>
 
                     <!-- kf3b03-->
                     <android.support.v7.widget.CardView
@@ -157,166 +157,203 @@
                         </LinearLayout>
                     </android.support.v7.widget.CardView>
 
-                    <!-- kf3b04-->
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/fldGrpCVkf3b04"
-                        style="@style/cardView">
+                    <LinearLayout
+                        android:id="@+id/fldGrpSecB04"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility='@{kf3b03c.checked? View.VISIBLE : View.GONE}'>
 
-                        <LinearLayout style="@style/linearlayout_view">
+                        <!-- kf3b04-->
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/fldGrpCVkf3b04"
+                            style="@style/cardView">
 
-                            <TextView
-                                style="@style/i_textview"
-                                android:text="@string/kf3b04" />
+                            <LinearLayout style="@style/linearlayout_view">
 
-                            <LinearLayout
-                                android:id="@+id/fldGrpLLkf3b04"
-                                style="@style/linearlayout_view">
+                                <TextView
+                                    style="@style/i_textview"
+                                    android:text="@string/kf3b04" />
+
+                                <LinearLayout
+                                    android:id="@+id/fldGrpLLkf3b04"
+                                    style="@style/linearlayout_view"
+                                    android:tag="0">
+
+                                    <CheckBox
+                                        android:id="@+id/kf3b04a"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="1dp"
+                                        android:text="@string/kf3b04a" />
+
+                                    <CheckBox
+                                        android:id="@+id/kf3b04b"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="1dp"
+                                        android:text="@string/kf3b04b" />
+
+                                    <CheckBox
+                                        android:id="@+id/kf3b04c"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="1dp"
+                                        android:text="@string/kf3b04c" />
+
+                                    <CheckBox
+                                        android:id="@+id/kf3b04d"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="1dp"
+                                        android:text="@string/kf3b04d" />
+
+                                    <CheckBox
+                                        android:id="@+id/kf3b04e"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="1dp"
+                                        android:text="@string/kf3b04e" />
+
+                                    <CheckBox
+                                        android:id="@+id/kf3b04f"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="1dp"
+                                        android:text="@string/kf3b04f" />
+
+                                    <CheckBox
+                                        android:id="@+id/kf3b04g"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="1dp"
+                                        android:text="@string/kf3b04g" />
+
+                                    <CheckBox
+                                        android:id="@+id/kf3b0496"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="1dp"
+                                        android:text="@string/other" />
+
+                                    <EditText
+                                        android:id="@+id/kf3b0496x"
+                                        style="@style/EditText"
+                                        android:hint="@string/other"
+                                        android:tag="kf3b0496"
+                                        android:text='@{kf3b0496.checked ? kf3b0496x.getText.toString : "" }'
+                                        android:visibility='@{kf3b0496.checked ? View.VISIBLE : View.GONE }' />
+
+                                </LinearLayout>
 
                                 <CheckBox
-                                    android:id="@+id/kf3b04a"
+                                    android:id="@+id/kf3b0498"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginBottom="1dp"
-                                    android:text="@string/kf3b04a" />
-
-                                <CheckBox
-                                    android:id="@+id/kf3b04b"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="1dp"
-                                    android:text="@string/kf3b04b" />
-
-                                <CheckBox
-                                    android:id="@+id/kf3b04c"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="1dp"
-                                    android:text="@string/kf3b04c" />
-
-                                <CheckBox
-                                    android:id="@+id/kf3b04d"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="1dp"
-                                    android:text="@string/kf3b04d" />
-
-                                <CheckBox
-                                    android:id="@+id/kf3b04e"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="1dp"
-                                    android:text="@string/kf3b04e" />
-
-                                <CheckBox
-                                    android:id="@+id/kf3b04f"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="1dp"
-                                    android:text="@string/kf3b04f" />
-
-                                <CheckBox
-                                    android:id="@+id/kf3b04g"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="1dp"
-                                    android:text="@string/kf3b04g" />
-
-                                <CheckBox
-                                    android:id="@+id/kf3b04h"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="1dp"
-                                    android:text="@string/kf3b04h" />
-
-                                <CheckBox
-                                    android:id="@+id/kf3b04i"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="1dp"
-                                    android:text="@string/kf3b04i" />
+                                    android:tag="-1"
+                                    android:text="@string/dkn" />
 
                             </LinearLayout>
 
-                        </LinearLayout>
+                        </android.support.v7.widget.CardView>
 
-                    </android.support.v7.widget.CardView>
+                        <!-- kf3b05-->
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/fldGrpCVkf3b05"
+                            style="@style/cardView">
 
-                    <!-- kf3b05-->
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/fldGrpCVkf3b05"
-                        style="@style/cardView">
+                            <LinearLayout style="@style/linearlayout_view">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                                <TextView
+                                    style="@style/i_textview"
+                                    android:text="@string/kf3b05" />
 
-                            <TextView
-                                style="@style/i_textview"
-                                android:text="@string/kf3b05" />
+                                <RadioGroup
+                                    android:id="@+id/kf3b05"
+                                    style="@style/i_radiogroup">
 
-                            <RadioGroup
-                                android:id="@+id/kf3b05"
-                                style="@style/i_radiogroup">
+                                    <RadioButton
+                                        android:id="@+id/kf3b05a"
+                                        style="@style/i_radiobutton"
+                                        android:text="@string/kf3b05a" />
 
-                                <RadioButton
-                                    android:id="@+id/kf3b05a"
-                                    style="@style/i_radiobutton"
-                                    android:text="@string/kf3b05a" />
+                                    <RadioButton
+                                        android:id="@+id/kf3b05b"
+                                        style="@style/i_radiobutton"
+                                        android:text="@string/kf3b05b" />
 
-                                <RadioButton
-                                    android:id="@+id/kf3b05b"
-                                    style="@style/i_radiobutton"
-                                    android:text="@string/kf3b05b" />
+                                    <RadioButton
+                                        android:id="@+id/kf3b05c"
+                                        style="@style/i_radiobutton"
+                                        android:text="@string/kf3b05c" />
 
-                                <RadioButton
-                                    android:id="@+id/kf3b05c"
-                                    style="@style/i_radiobutton"
-                                    android:text="@string/kf3b05c" />
+                                    <RadioButton
+                                        android:id="@+id/kf3b05d"
+                                        style="@style/i_radiobutton"
+                                        android:text="@string/kf3b05d" />
 
-                                <RadioButton
-                                    android:id="@+id/kf3b05d"
-                                    style="@style/i_radiobutton"
-                                    android:text="@string/kf3b05d" />
+                                    <RadioButton
+                                        android:id="@+id/kf3b05e"
+                                        style="@style/i_radiobutton"
+                                        android:text="@string/kf3b05e" />
 
-                                <RadioButton
-                                    android:id="@+id/kf3b05e"
-                                    style="@style/i_radiobutton"
-                                    android:text="@string/kf3b05e" />
+                                </RadioGroup>
 
-                            </RadioGroup>
+                            </LinearLayout>
 
-                        </LinearLayout>
+                        </android.support.v7.widget.CardView>
 
-                    </android.support.v7.widget.CardView>
+                        <!-- kf3b06-->
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/fldGrpCVkf3b06"
+                            style="@style/cardView">
 
-                    <!-- kf3b06-->
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/fldGrpCVkf3b06"
-                        style="@style/cardView">
+                            <LinearLayout style="@style/linearlayout_view">
 
-                        <LinearLayout style="@style/linearlayout_view">
+                                <TextView
+                                    style="@style/i_textview"
+                                    android:text="@string/kf3b06" />
 
-                            <TextView
-                                style="@style/i_textview"
-                                android:text="@string/kf3b06" />
+                                <RadioGroup
+                                    android:id="@+id/kf3b06"
+                                    style="@style/i_radiogroup">
 
-                            <RadioGroup
-                                android:id="@+id/kf3b06"
-                                style="@style/i_radiogroup">
+                                    <RadioButton
+                                        android:id="@+id/kf3b06a"
+                                        style="@style/i_radiobutton"
+                                        android:text="@string/kf3b06a" />
 
-                                <RadioButton
-                                    android:id="@+id/kf3b06a"
-                                    style="@style/i_radiobutton"
-                                    android:text="@string/kf3b06a" />
+                                    <EditText
+                                        android:id="@+id/kf3b06h"
+                                        style="@style/EditText_number"
+                                        android:hint="@string/hours"
+                                        android:maxLength="2"
+                                        android:tag="kf3b06a"
+                                        android:text='@{kf3b06a.checked ? kf3b06h.getText.toString : "" }'
+                                        android:visibility='@{kf3b06a.checked ? View.VISIBLE : View.GONE }' />
 
-                                <RadioButton
-                                    android:id="@+id/kf3b06b"
-                                    style="@style/i_radiobutton"
-                                    android:text="@string/kf3b06b" />
+                                    <RadioButton
+                                        android:id="@+id/kf3b06b"
+                                        style="@style/i_radiobutton"
+                                        android:text="@string/kf3b06b" />
 
-                            </RadioGroup>
+                                    <EditText
+                                        android:id="@+id/kf3b06d"
+                                        style="@style/EditText_number"
+                                        android:hint="@string/days"
+                                        android:maxLength="2"
+                                        android:tag="kf3b06b"
+                                        android:text='@{kf3b06b.checked ? kf3b06d.getText.toString : "" }'
+                                        android:visibility='@{kf3b06b.checked ? View.VISIBLE : View.GONE }' />
 
-                        </LinearLayout>
+                                </RadioGroup>
 
-                    </android.support.v7.widget.CardView>
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
