--- a/app/src/main/res/layout/activity_section_e_form3.xml
+++ b/app/src/main/res/layout/activity_section_e_form3.xml
@@ -20,7 +20,6 @@
                 android:id="@+id/fldGrpSecE02"
                 style="@style/linearlayout_view_wt_bound">
 
-
                 <!-- kf3e01-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3e01"
@@ -33,10 +32,9 @@
                             android:text="@string/kf3e01" />
 
                         <EditText
-                            android:id="@+id/kf3e01a"
-                            style="@style/textInput"
-                            android:hint="@string/kf3e01"
-                            android:inputType="number"
+                            android:id="@+id/kf3e01"
+                            style="@style/EditText_number"
+                            android:hint="@string/kf3e01a"
                             android:maxLength="4" />
 
                     </LinearLayout>
@@ -67,11 +65,11 @@
                                 android:id="@+id/kf3e02b"
                                 style="@style/i_radiobutton"
                                 android:text="@string/no" />
-                            
+
                         </RadioGroup>
-                        
+
                     </LinearLayout>
-                    
+
                 </android.support.v7.widget.CardView>
 
                 <!-- kf3e03-->
@@ -200,10 +198,9 @@
                             android:text="@string/kf3e05" />
 
                         <EditText
-                            android:id="@+id/kf3e05a"
-                            style="@style/textInput"
-                            android:hint="@string/kf3e05"
-                            android:inputType="number"
+                            android:id="@+id/kf3e05"
+                            style="@style/EditText_number"
+                            android:hint="@string/min"
                             android:maxLength="4" />
 
                     </LinearLayout>
@@ -222,10 +219,9 @@
                             android:text="@string/kf3e06" />
 
                         <EditText
-                            android:id="@+id/kf3e06a"
-                            style="@style/textInput"
-                            android:hint="@string/kf3e06"
-                            android:inputType="number"
+                            android:id="@+id/kf3e06"
+                            style="@style/EditText_number"
+                            android:hint="@string/min"
                             android:maxLength="4" />
 
                     </LinearLayout>
@@ -295,11 +291,9 @@
                 </android.support.v7.widget.CardView>
 
                 <!-- H4-->
-                <android.support.v7.widget.CardView
-                    style="@style/cardView">
+                <android.support.v7.widget.CardView style="@style/cardView">
 
-                    <LinearLayout
-                        style="@style/linearlayout_view">
+                    <LinearLayout style="@style/linearlayout_view">
 
                         <TextView
                             style="@style/i_textview"
@@ -445,35 +439,38 @@
                             style="@style/i_textview"
                             android:text="@string/kf3e12_" />
 
-                        <RadioGroup
-                            android:id="@+id/kf3e12"
-                            style="@style/i_radiogroup">
+                        <LinearLayout
+                            android:id="@+id/fldGrpLLkf3e12"
+                            style="@style/linearlayout_view_wt_bound"
+                            android:tag="0">
 
-                            <RadioButton
+                            <CheckBox
                                 android:id="@+id/kf3e12a"
-                                style="@style/i_radiobutton"
+                                style="@style/i_checkbox"
                                 android:text="@string/kf3e12a" />
 
-                            <RadioButton
+                            <CheckBox
                                 android:id="@+id/kf3e12b"
-                                style="@style/i_radiobutton"
+                                style="@style/i_checkbox"
                                 android:text="@string/kf3e12b" />
 
-                            <RadioButton
+                            <CheckBox
                                 android:id="@+id/kf3e12c"
-                                style="@style/i_radiobutton"
+                                style="@style/i_checkbox"
                                 android:text="@string/kf3e12c" />
 
-                            <RadioButton
+                            <CheckBox
                                 android:id="@+id/kf3e12d"
-                                style="@style/i_radiobutton"
+                                style="@style/i_checkbox"
                                 android:text="@string/kf3e12d" />
 
-                            <RadioButton
+                            <CheckBox
                                 android:id="@+id/kf3e12e"
-                                style="@style/i_radiobutton"
+                                style="@style/i_checkbox"
                                 android:text="@string/kf3e12e" />
-                        </RadioGroup>
+
+                        </LinearLayout>
+
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
@@ -524,134 +521,136 @@
 
                 </android.support.v7.widget.CardView>
 
-                <!-- kf3e14-->
-                <android.support.v7.widget.CardView
-                    android:id="@+id/fldGrpCVkf3e14"
-                    style="@style/cardView"
+                <LinearLayout
+                    android:id="@+id/fldGrpSecE02b"
+                    style="@style/linearlayout_view_wt_bound"
                     android:visibility='@{kf3e13a.checked? View.GONE : View.VISIBLE}'>
 
-                    <LinearLayout style="@style/linearlayout_view">
+                    <!-- kf3e14-->
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/fldGrpCVkf3e14"
+                        style="@style/cardView">
 
-                        <TextView
-                            style="@style/i_textview"
-                            android:text="@string/kf3e14" />
+                        <LinearLayout style="@style/linearlayout_view">
 
-                        <RadioGroup
-                            android:id="@+id/kf3e14"
-                            style="@style/i_radiogroup">
+                            <TextView
+                                style="@style/i_textview"
+                                android:text="@string/kf3e14" />
 
-                            <RadioButton
-                                android:id="@+id/kf3e14a"
-                                style="@style/i_radiobutton"
-                                android:text="@string/yes" />
+                            <RadioGroup
+                                android:id="@+id/kf3e14"
+                                style="@style/i_radiogroup">
 
-                            <RadioButton
-                                android:id="@+id/kf3e14b"
-                                style="@style/i_radiobutton"
-                                android:text="@string/no" />
+                                <RadioButton
+                                    android:id="@+id/kf3e14a"
+                                    style="@style/i_radiobutton"
+                                    android:text="@string/yes" />
 
-                        </RadioGroup>
+                                <RadioButton
+                                    android:id="@+id/kf3e14b"
+                                    style="@style/i_radiobutton"
+                                    android:text="@string/no" />
 
-                    </LinearLayout>
+                            </RadioGroup>
 
-                </android.support.v7.widget.CardView>
+                        </LinearLayout>
 
-                <!-- kf3e15-->
-                <android.support.v7.widget.CardView
-                    android:id="@+id/fldGrpCVkf3e15"
-                    style="@style/cardView"
-                    android:visibility='@{kf3e13a.checked? View.GONE : View.VISIBLE}'>
+                    </android.support.v7.widget.CardView>
 
-                    <LinearLayout style="@style/linearlayout_view">
+                    <!-- kf3e15-->
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/fldGrpCVkf3e15"
+                        style="@style/cardView">
 
-                        <TextView
-                            style="@style/i_textview"
-                            android:text="@string/kf3e15" />
+                        <LinearLayout style="@style/linearlayout_view">
 
-                        <RadioGroup
-                            android:id="@+id/kf3e15"
-                            style="@style/i_radiogroup">
+                            <TextView
+                                style="@style/i_textview"
+                                android:text="@string/kf3e15" />
 
-                            <RadioButton
-                                android:id="@+id/kf3e15a"
-                                style="@style/i_radiobutton"
-                                android:text="@string/yes" />
+                            <RadioGroup
+                                android:id="@+id/kf3e15"
+                                style="@style/i_radiogroup">
 
-                            <RadioButton
-                                android:id="@+id/kf3e15b"
-                                style="@style/i_radiobutton"
-                                android:text="@string/no" />
+                                <RadioButton
+                                    android:id="@+id/kf3e15a"
+                                    style="@style/i_radiobutton"
+                                    android:text="@string/yes" />
 
-                        </RadioGroup>
+                                <RadioButton
+                                    android:id="@+id/kf3e15b"
+                                    style="@style/i_radiobutton"
+                                    android:text="@string/no" />
 
-                    </LinearLayout>
+                            </RadioGroup>
 
-                </android.support.v7.widget.CardView>
+                        </LinearLayout>
 
-                <!-- kf3e16-->
-                <android.support.v7.widget.CardView
-                    android:id="@+id/fldGrpCVkf3e16"
-                    style="@style/cardView"
-                    android:visibility='@{kf3e13a.checked? View.GONE : View.VISIBLE}'>
+                    </android.support.v7.widget.CardView>
 
-                    <LinearLayout style="@style/linearlayout_view">
+                    <!-- kf3e16-->
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/fldGrpCVkf3e16"
+                        style="@style/cardView">
 
-                        <TextView
-                            style="@style/i_textview"
-                            android:text="@string/kf3e16" />
+                        <LinearLayout style="@style/linearlayout_view">
 
-                        <RadioGroup
-                            android:id="@+id/kf3e16"
-                            style="@style/i_radiogroup">
+                            <TextView
+                                style="@style/i_textview"
+                                android:text="@string/kf3e16" />
 
-                            <RadioButton
-                                android:id="@+id/kf3e16a"
-                                style="@style/i_radiobutton"
-                                android:text="@string/yes" />
+                            <RadioGroup
+                                android:id="@+id/kf3e16"
+                                style="@style/i_radiogroup">
 
-                            <RadioButton
-                                android:id="@+id/kf3e16b"
-                                style="@style/i_radiobutton"
-                                android:text="@string/no" />
+                                <RadioButton
+                                    android:id="@+id/kf3e16a"
+                                    style="@style/i_radiobutton"
+                                    android:text="@string/yes" />
 
-                        </RadioGroup>
+                                <RadioButton
+                                    android:id="@+id/kf3e16b"
+                                    style="@style/i_radiobutton"
+                                    android:text="@string/no" />
 
-                    </LinearLayout>
+                            </RadioGroup>
 
-                </android.support.v7.widget.CardView>
+                        </LinearLayout>
 
-                <!-- kf3e17-->
-                <android.support.v7.widget.CardView
-                    android:id="@+id/fldGrpCVkf3e17"
-                    style="@style/cardView"
-                    android:visibility='@{kf3e13a.checked? View.GONE : View.VISIBLE}'>
+                    </android.support.v7.widget.CardView>
 
-                    <LinearLayout style="@style/linearlayout_view">
+                    <!-- kf3e17-->
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/fldGrpCVkf3e17"
+                        style="@style/cardView">
 
-                        <TextView
-                            style="@style/i_textview"
-                            android:text="@string/kf3e17" />
+                        <LinearLayout style="@style/linearlayout_view">
 
-                        <RadioGroup
-                            android:id="@+id/kf3e17"
-                            style="@style/i_radiogroup">
+                            <TextView
+                                style="@style/i_textview"
+                                android:text="@string/kf3e17" />
 
-                            <RadioButton
-                                android:id="@+id/kf3e17a"
-                                style="@style/i_radiobutton"
-                                android:text="@string/yes" />
+                            <RadioGroup
+                                android:id="@+id/kf3e17"
+                                style="@style/i_radiogroup">
 
-                            <RadioButton
-                                android:id="@+id/kf3e17b"
-                                style="@style/i_radiobutton"
-                                android:text="@string/no" />
+                                <RadioButton
+                                    android:id="@+id/kf3e17a"
+                                    style="@style/i_radiobutton"
+                                    android:text="@string/yes" />
 
-                        </RadioGroup>
+                                <RadioButton
+                                    android:id="@+id/kf3e17b"
+                                    style="@style/i_radiobutton"
+                                    android:text="@string/no" />
 
-                    </LinearLayout>
+                            </RadioGroup>
 
-                </android.support.v7.widget.CardView>
+                        </LinearLayout>
 
+                    </android.support.v7.widget.CardView>
+
+                </LinearLayout>
 
                 <!-- kf3eh6-->
                 <android.support.v7.widget.CardView
@@ -732,9 +731,8 @@
                 </android.support.v7.widget.CardView>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:id="@+id/fldGrpSecE02c"
+                    style="@style/linearlayout_view_wt_bound"
                     android:visibility='@{kf3e19a.checked? View.GONE : View.VISIBLE}'>
 
                     <!-- kf3e20-->
@@ -799,35 +797,41 @@
 
                 </LinearLayout>
 
-
             </LinearLayout>
 
-
+            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
-                style="@style/linearlayout_view"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:id="@+id/fldGrpbtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingTop="32dp">
 
                 <Button
-                    android:id="@+id/btn_Continue"
-                    style="@style/buttons2"
-                    android:background="@color/colorPrimary"
+                    android:id="@+id/btnNext"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
                     android:text="@string/nextSection"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
 
                 <Button
-                    android:id="@+id/btn_End"
-                    style="@style/buttons2"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/colorAccent"
+                    android:id="@+id/btnEnd"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/end_interview"
-                    android:textColor="@color/white" />
+                    android:text="@string/endForm"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
             </LinearLayout>
 
         </LinearLayout>
