--- a/app/src/main/res/layout/activity_section_f_form3.xml
+++ b/app/src/main/res/layout/activity_section_f_form3.xml
@@ -20,7 +20,6 @@
                 android:id="@+id/fldGrpSecF02"
                 style="@style/linearlayout_view_wt_bound">
 
-
                 <!-- kf3f01-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3f01"
@@ -32,20 +31,26 @@
                             style="@style/i_textview"
                             android:text="@string/kf3f01" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f01a"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f01a" />
+                        <LinearLayout
+                            style="@style/linearlayout_view_wt_bound"
+                            android:tag="0">
 
-                        <CheckBox
-                            android:id="@+id/kf3f01b"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f01b" />
+                            <CheckBox
+                                android:id="@+id/kf3f01a"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f01a" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f01c"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f01c" />
+                            <CheckBox
+                                android:id="@+id/kf3f01b"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f01b" />
+
+                            <CheckBox
+                                android:id="@+id/kf3f01c"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f01c" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -62,43 +67,49 @@
                             style="@style/i_textview"
                             android:text="@string/kf3f02" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f02a"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f02a" />
+                        <LinearLayout
+                            style="@style/linearlayout_view_wt_bound"
+                            android:tag="0">
 
-                        <CheckBox
-                            android:id="@+id/kf3f02b"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f02b" />
+                            <CheckBox
+                                android:id="@+id/kf3f02a"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f02a" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f02c"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f02c" />
+                            <CheckBox
+                                android:id="@+id/kf3f02b"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f02b" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f02d"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f02d" />
+                            <CheckBox
+                                android:id="@+id/kf3f02c"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f02c" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f02e"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f02e" />
+                            <CheckBox
+                                android:id="@+id/kf3f02d"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f02d" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f0296"
-                            style="@style/i_checkbox"
-                            android:text="@string/other" />
+                            <CheckBox
+                                android:id="@+id/kf3f02e"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f02e" />
 
-                        <EditText
-                            android:id="@+id/kf3f0296x"
-                            style="@style/EditText"
-                            android:hint="@string/other"
-                            android:tag="kf3f0296"
-                            android:text='@{kf3f0296.checked ? kf3f0296x.getText.toString : "" }'
-                            android:visibility='@{kf3f0296.checked ? View.VISIBLE : View.GONE }' />
+                            <CheckBox
+                                android:id="@+id/kf3f0296"
+                                style="@style/i_checkbox"
+                                android:text="@string/other" />
+
+                            <EditText
+                                android:id="@+id/kf3f0296x"
+                                style="@style/EditText"
+                                android:hint="@string/other"
+                                android:tag="kf3f0296"
+                                android:text='@{kf3f0296.checked ? kf3f0296x.getText.toString : "" }'
+                                android:visibility='@{kf3f0296.checked ? View.VISIBLE : View.GONE }' />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -147,38 +158,45 @@
                             style="@style/i_textview"
                             android:text="@string/kf3f04" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f04a"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f04a" />
+                        <LinearLayout
+                            android:id="@+id/fldGrpLLkf3f04"
+                            style="@style/linearlayout_view_wt_bound"
+                            android:tag="0">
 
-                        <CheckBox
-                            android:id="@+id/kf3f04b"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f04b" />
+                            <CheckBox
+                                android:id="@+id/kf3f04a"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f04a" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f04c"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f04c" />
+                            <CheckBox
+                                android:id="@+id/kf3f04b"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f04b" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f04d"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f04d" />
+                            <CheckBox
+                                android:id="@+id/kf3f04c"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f04c" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f0496"
-                            style="@style/i_checkbox"
-                            android:text="@string/other" />
+                            <CheckBox
+                                android:id="@+id/kf3f04d"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f04d" />
 
-                        <EditText
-                            android:id="@+id/kf3f0496x"
-                            style="@style/EditText"
-                            android:hint="@string/other"
-                            android:tag="kf3f0496"
-                            android:text='@{kf3f0496.checked ? kf3f0496x.getText.toString : "" }'
-                            android:visibility='@{kf3f0496.checked ? View.VISIBLE : View.GONE }' />
+                            <CheckBox
+                                android:id="@+id/kf3f0496"
+                                style="@style/i_checkbox"
+                                android:text="@string/other" />
+
+                            <EditText
+                                android:id="@+id/kf3f0496x"
+                                style="@style/EditText"
+                                android:hint="@string/other"
+                                android:tag="kf3f0496"
+                                android:text='@{kf3f0496.checked ? kf3f0496x.getText.toString : "" }'
+                                android:visibility='@{kf3f0496.checked ? View.VISIBLE : View.GONE }' />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -195,33 +213,39 @@
                             style="@style/i_textview"
                             android:text="@string/kf3f05" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f05a"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f05a" />
+                        <LinearLayout
+                            style="@style/linearlayout_view_wt_bound"
+                            android:tag="0">
 
-                        <CheckBox
-                            android:id="@+id/kf3f05b"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f05b" />
+                            <CheckBox
+                                android:id="@+id/kf3f05a"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f05a" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f05c"
-                            style="@style/i_checkbox"
-                            android:text="@string/kf3f05c" />
+                            <CheckBox
+                                android:id="@+id/kf3f05b"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f05b" />
 
-                        <CheckBox
-                            android:id="@+id/kf3f0596"
-                            style="@style/i_checkbox"
-                            android:text="@string/other" />
+                            <CheckBox
+                                android:id="@+id/kf3f05c"
+                                style="@style/i_checkbox"
+                                android:text="@string/kf3f05c" />
 
-                        <EditText
-                            android:id="@+id/kf3f0596x"
-                            style="@style/EditText"
-                            android:hint="@string/other"
-                            android:tag="kf3f0596"
-                            android:text='@{kf3f0596.checked ? kf3f0596x.getText.toString : "" }'
-                            android:visibility='@{kf3f0596.checked ? View.VISIBLE : View.GONE }' />
+                            <CheckBox
+                                android:id="@+id/kf3f0596"
+                                style="@style/i_checkbox"
+                                android:text="@string/other" />
+
+                            <EditText
+                                android:id="@+id/kf3f0596x"
+                                style="@style/EditText"
+                                android:hint="@string/other"
+                                android:tag="kf3f0596"
+                                android:text='@{kf3f0596.checked ? kf3f0596x.getText.toString : "" }'
+                                android:visibility='@{kf3f0596.checked ? View.VISIBLE : View.GONE }' />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -258,34 +282,41 @@
 
                 </android.support.v7.widget.CardView>
 
-
             </LinearLayout>
 
+            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
-                style="@style/linearlayout_view"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:id="@+id/fldGrpbtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:paddingTop="32dp">
 
                 <Button
-                    android:id="@+id/btn_Continue"
-                    style="@style/buttons2"
-                    android:background="@color/colorPrimary"
+                    android:id="@+id/btnNext"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
                     android:text="@string/nextSection"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
 
                 <Button
-                    android:id="@+id/btn_End"
-                    style="@style/buttons2"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/colorAccent"
+                    android:id="@+id/btnEnd"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/end_interview"
-                    android:textColor="@color/white" />
+                    android:text="@string/endForm"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
             </LinearLayout>
 
         </LinearLayout>
