--- a/app/src/main/res/layout/activity_section_e_form3.xml
+++ b/app/src/main/res/layout/activity_section_e_form3.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.form1.SectionAForm1Activity">
 
@@ -31,11 +32,14 @@
                             style="@style/i_textview"
                             android:text="@string/kf3e01" />
 
-                        <EditText
+                        <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf3e01"
                             style="@style/EditText_number"
                             android:hint="@string/kf3e01a"
-                            android:maxLength="4" />
+                            android:maxLength="4"
+                            app:maxValue="4500"
+                            app:minValue="1200"
+                            app:type="range" />
 
                     </LinearLayout>
 
@@ -118,7 +122,7 @@
                     <LinearLayout style="@style/linearlayout_view">
 
                         <TextView
-                            style="@style/i_textview"
+                            style="@style/textview_heading"
                             android:text="@string/kf3eh2"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -132,24 +136,8 @@
                     <LinearLayout style="@style/linearlayout_view">
 
                         <TextView
-                            style="@style/i_textview"
+                            style="@style/textview_heading"
                             android:text="@string/kf3eh2"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-                <!-- H3-->
-                <android.support.v7.widget.CardView
-
-                    style="@style/cardView">
-
-                    <LinearLayout style="@style/linearlayout_view">
-
-                        <TextView
-                            style="@style/i_textview"
-                            android:text="@string/kf3eh3"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -166,24 +154,41 @@
                             style="@style/i_textview"
                             android:text="@string/kf3e04" />
 
-                        <RadioGroup
-                            android:id="@+id/kf3e04"
-                            style="@style/i_radiogroup">
+                        <com.edittextpicker.aliazaz.EditTextPicker
+                            android:id="@+id/kf3e04a"
+                            style="@style/EditText_number"
+                            android:hint="@string/min"
+                            android:maxLength="2"
+                            app:maxValue="40"
+                            app:minValue="34"
+                            app:type="range" />
 
-                            <RadioButton
-                                android:id="@+id/kf3e04a"
-                                style="@style/i_radiobutton"
-                                android:text="@string/kf3e04a" />
-
-                            <RadioButton
-                                android:id="@+id/kf3e04b"
-                                style="@style/i_radiobutton"
-                                android:text="@string/kf3e04b" />
-
-                        </RadioGroup>
+                        <com.edittextpicker.aliazaz.EditTextPicker
+                            android:id="@+id/kf3e04b"
+                            style="@style/EditText_number"
+                            android:hint="@string/min"
+                            android:maxLength="2"
+                            app:maxValue="40"
+                            app:minValue="34"
+                            app:type="range" />
 
                     </LinearLayout>
 
+                </android.support.v7.widget.CardView>
+
+
+                <!-- H3-->
+                <android.support.v7.widget.CardView
+
+                    style="@style/cardView">
+
+                    <LinearLayout style="@style/linearlayout_view">
+
+                        <TextView
+                            style="@style/textview_heading"
+                            android:text="@string/kf3eh3"
+                            android:textStyle="bold" />
+                    </LinearLayout>
                 </android.support.v7.widget.CardView>
 
                 <!-- kf3e05-->
@@ -197,11 +202,14 @@
                             style="@style/i_textview"
                             android:text="@string/kf3e05" />
 
-                        <EditText
+                        <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf3e05"
                             style="@style/EditText_number"
                             android:hint="@string/min"
-                            android:maxLength="4" />
+                            android:maxLength="2"
+                            app:maxValue="80"
+                            app:minValue="40"
+                            app:type="range" />
 
                     </LinearLayout>
 
@@ -218,11 +226,14 @@
                             style="@style/i_textview"
                             android:text="@string/kf3e06" />
 
-                        <EditText
+                        <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf3e06"
                             style="@style/EditText_number"
                             android:hint="@string/min"
-                            android:maxLength="4" />
+                            android:maxLength="2"
+                            app:maxValue="80"
+                            app:minValue="40"
+                            app:type="range" />
 
                     </LinearLayout>
 
@@ -290,50 +301,20 @@
 
                 </android.support.v7.widget.CardView>
 
+
                 <!-- H4-->
                 <android.support.v7.widget.CardView style="@style/cardView">
 
                     <LinearLayout style="@style/linearlayout_view">
 
                         <TextView
-                            style="@style/i_textview"
+                            style="@style/textview_heading"
                             android:text="@string/kf3eh4"
                             android:textStyle="bold" />
 
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/fldGrpCVkf3eh4"
-                    style="@style/cardView">
-
-                    <LinearLayout style="@style/linearlayout_view">
-
-                        <TextView
-                            style="@style/i_textview"
-                            android:text="@string/kf3eh4" />
-
-                        <RadioGroup
-                            android:id="@+id/kf3eh4"
-                            style="@style/i_radiogroup">
-
-                            <RadioButton
-                                android:id="@+id/kf3eh4a"
-                                style="@style/i_radiobutton"
-                                android:text="@string/yes" />
-
-                            <RadioButton
-                                android:id="@+id/kf3eh4b"
-                                style="@style/i_radiobutton"
-                                android:text="@string/no" />
-
-                        </RadioGroup>
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
 
                 <!-- kf3e09-->
                 <android.support.v7.widget.CardView
@@ -361,6 +342,21 @@
                                 android:text="@string/no" />
 
                         </RadioGroup>
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+
+                <!-- H5-->
+                <android.support.v7.widget.CardView style="@style/cardView">
+
+                    <LinearLayout style="@style/linearlayout_view">
+
+                        <TextView
+                            style="@style/textview_heading"
+                            android:text="@string/kf3eh5"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
@@ -437,7 +433,11 @@
 
                         <TextView
                             style="@style/i_textview"
-                            android:text="@string/kf3e12_" />
+                            android:text="@string/kf3e12" />
+
+                        <TextView
+                            style="@style/i_textview"
+                            android:text="@string/kf3e12h1" />
 
                         <LinearLayout
                             android:id="@+id/fldGrpLLkf3e12"
@@ -474,16 +474,15 @@
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
-                <!-- kf3eh5-->
-                <android.support.v7.widget.CardView
 
-                    style="@style/cardView">
+                <!-- H6-->
+                <android.support.v7.widget.CardView style="@style/cardView">
 
                     <LinearLayout style="@style/linearlayout_view">
 
                         <TextView
-                            style="@style/i_textview"
-                            android:text="@string/kf3eh5"
+                            style="@style/textview_heading"
+                            android:text="@string/kf3eh6"
                             android:textStyle="bold" />
 
                     </LinearLayout>
@@ -652,16 +651,15 @@
 
                 </LinearLayout>
 
-                <!-- kf3eh6-->
-                <android.support.v7.widget.CardView
 
-                    style="@style/cardView">
+                <!-- H7-->
+                <android.support.v7.widget.CardView style="@style/cardView">
 
                     <LinearLayout style="@style/linearlayout_view">
 
                         <TextView
-                            style="@style/i_textview"
-                            android:text="@string/kf3eh6"
+                            style="@style/textview_heading"
+                            android:text="@string/kf3eh7"
                             android:textStyle="bold" />
 
                     </LinearLayout>
@@ -694,6 +692,21 @@
                                 android:text="@string/no" />
 
                         </RadioGroup>
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+
+                <!-- H8-->
+                <android.support.v7.widget.CardView style="@style/cardView">
+
+                    <LinearLayout style="@style/linearlayout_view">
+
+                        <TextView
+                            style="@style/textview_heading"
+                            android:text="@string/kf3eh8"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
