--- a/app/src/main/res/layout/activity_section_c_form3.xml
+++ b/app/src/main/res/layout/activity_section_c_form3.xml
@@ -676,13 +676,6 @@
                                 android:text="@string/kf3c16j" />
 
                             <CheckBox
-                                android:id="@+id/kf3c1698"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="1dp"
-                                android:text="@string/dkn" />
-
-                            <CheckBox
                                 android:id="@+id/kf3c1696"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -698,6 +691,14 @@
                                 android:visibility='@{kf3c1696.checked ? View.VISIBLE : View.GONE }' />
 
                         </LinearLayout>
+
+                        <CheckBox
+                            android:id="@+id/kf3c1698"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="1dp"
+                            android:tag="-1"
+                            android:text="@string/dkn" />
 
                     </LinearLayout>
 
@@ -935,6 +936,7 @@
                                     android:id="@+id/kf3c21bh"
                                     style="@style/EditText_number"
                                     android:hint="@string/hours"
+                                    android:maxLength="2"
                                     android:tag="kf3c21b"
                                     android:text='@{kf3c21b.checked ? kf3c21bh.getText.toString : "" }'
                                     android:visibility='@{kf3c21b.checked ? View.VISIBLE : View.GONE }'
@@ -951,6 +953,7 @@
                                     android:id="@+id/kf3c21cd"
                                     style="@style/EditText_number"
                                     android:hint="@string/days"
+                                    android:maxLength="2"
                                     android:tag="kf3c21c"
                                     android:text='@{kf3c21c.checked ? kf3c21cd.getText.toString : "" }'
                                     android:visibility='@{kf3c21c.checked ? View.VISIBLE : View.GONE }'
