--- a/app/src/main/res/layout/activity_section_e_form3.xml
+++ b/app/src/main/res/layout/activity_section_e_form3.xml
@@ -123,7 +123,7 @@
 
                         <TextView
                             style="@style/textview_heading"
-                            android:text="@string/kf3eh2"
+                            android:text="@string/kf3eh1"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -157,7 +157,7 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf3e04a"
                             style="@style/EditText_number"
-                            android:hint="@string/min"
+                            android:hint="@string/kf3e04a"
                             android:maxLength="2"
                             app:maxValue="40"
                             app:minValue="34"
@@ -166,7 +166,7 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf3e04b"
                             style="@style/EditText_number"
-                            android:hint="@string/min"
+                            android:hint="@string/kf3e04b"
                             android:maxLength="2"
                             app:maxValue="40"
                             app:minValue="34"
